# voxelGrid_filter_PCL_1.8

./: CMakeLists.txt  README.md  cuboid_with_normals.ply  downsampled_model_cloud_PCL_1.8.1_cuboid_with_normals.ply.pcd  downsampled_model_cloud_PCL_1.8.1_scene_0_sensor_0.pcd.pcd  downsampling_compare.cpp
